--- a/LIVE-DETECTION/requirements.txt
+++ b/LIVE-DETECTION/requirements.txt
@@ -140,3 +140,10 @@ virtualenv==20.17.1
 watchdog==4.0.0
 wcwidth==0.2.13
 wrapt==1.15.0
+streamlit
+opencv-python
+pytesseract
+pillow
+numpy
+face-recognition
+sqlite3
