--- a/LIVE-DETECTION/requirements.txt
+++ b/LIVE-DETECTION/requirements.txt
@@ -1,149 +1,7 @@
-﻿absl-py==1.4.0
-aioice==0.9.0
-aiortc==1.8.0
-altair==5.3.0
-asttokens==2.4.1
-astunparse==1.6.3
-attrs==23.1.0
-av==11.0.0
-beautifulsoup4==4.12.3
-blinker==1.6.2
-cachetools==5.3.1
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.3
-cmake==3.29.2
-colorama==0.4.6
-comm==0.2.1
-contourpy==1.0.7
-cryptography==42.0.6
-cycler==0.11.0
-debugpy==1.8.1
-decorator==5.1.1
-deepface==0.0.91
-distlib==0.3.6
-dlib @ file:///C:/Users/Laptop/Downloads/dlib/dlib-19.24.1-cp311-cp311-win_amd64.whl#sha256=6f1a5ee167975d7952b28e0ce4495f1d9a77644761cf5720fb66d7c6188ae496
-dnspython==2.6.1
-et-xmlfile==1.1.0
-executing==2.0.1
-face-recognition==1.3.0
-face-recognition-models==0.3.0
-filelock==3.13.1
-fire==0.6.0
-Flask-SQLAlchemy==3.0.
-flatbuffers==23.5.26
-fonttools==4.39.3
-fsspec==2023.12.2
-future==0.18.3
-gast==0.4.0
-gdown==5.1.0
-gitdb==4.0.11
-GitPython==3.1.43
-google-auth==2.21.0
-google-auth-oauthlib==1.0.0
-google-crc32c==1.5.0
-google-pasta==0.2.0
-greenlet==2.0.1
-grpcio==1.56.0
-gunicorn==21.2.0
-h5py==3.9.0
-idna==3.6
-ifaddr==0.2.0
-imageio==2.34.1
-ipykernel==6.29.2
-ipython==8.22.1
-itsdangerous==2.1.2
-jedi==0.19.1
-Jinja2==3.1.3
-joblib==1.3.2
-jsonschema==3.2.0
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-keras==2.13.1
-kiwisolver==1.4.4
-lazy_loader==0.4
-libclang==16.0.0
-Markdown==3.4.3
-markdown-it-py==3.0.0
-MarkupSafe==2.1.4
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mpmath==1.3.0
-mtcnn==0.1.1
-neattext==0.1.3
-nest-asyncio==1.6.0
-networkx==3.2.1
-numpy==1.24.3
-oauthlib==3.2.2
-opencv-python==4.9.0.80
-opencv-python-headless==4.9.0.80
-openpyxl==3.1.2
-opt-einsum==3.3.0
-packaging==23.2
-pandas==2.0.1
-parso==0.8.3
-PassportEye==2.2.1
-pdfminer==20191125
-pillow==10.2.0
-pipdeptree==2.13.1
-platformdirs==2.6.2
-prompt-toolkit==3.0.43
-protobuf==4.23.3
-psutil==5.9.8
-pure-eval==0.2.2
-pyarrow==16.0.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.22
-pycryptodome==3.20.0
-pydeck==0.9.0
-pyee==11.1.0
-Pygments==2.17.2
-pylibsrtp==0.10.0
-pymemcache==4.0.0
-pyOpenSSL==24.1.0
-pyparsing==3.0.9
-pyrsistent==0.19.3
-PySocks==1.7.1
-pytesseract==0.3.10
-python-dateutil==2.8.2
-pytz==2022.7.1
-pywin32==306
-pyzmq==25.1.2
-retina-face==0.0.17
-rich==13.7.1
-rsa==4.9
-smmap==5.0.1
-soupsieve==2.5
-SQLAlchemy==1.4.46
-sqlparse==0.4.4
-stack-data==0.6.3
-streamlit==1.34.0
-streamlit-webrtc==0.47.6
-sympy==1.12
-tenacity==8.2.3
-termcolor==2.3.0
-threadpoolctl==3.2.0
-tifffile==2024.4.24
-toml==0.10.2
-toolz==0.12.1
-tqdm==4.66.1
-traitlets==5.14.
-typing_extensions==4.5.0
-tzdata==2023.4
-uritools==4.0.1
-urlextract==1.8.0
-urllib3==1.26.18
-virtualenv==20.17.1
-watchdog==4.0.0
-wcwidth==0.2.13
-wrapt==1.15.0
 streamlit
 opencv-python
 pytesseract
-pillow
+Pillow
 numpy
 face-recognition
 sqlite3
